...
        }
    }
}

extension ProductListView {
    enum AccssibilityIdentifier: String {
        case productList
        case productRow = "productRow_"
        case loadingIndicator
    }
}

