...
    "add_to_cart" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Add to Cart"
          }
        },
        "sw" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Ongeza kwenye Cart"
...
